updated the header title

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="mx-auto">
-		<h2>Angular 7 Canvas Example</h2>
+		<h2>Signular</h2>
 		<div class="center">
 			<ngxy-canvas [width]="640" [height]="240"></ngxy-canvas>
 		</div>
