--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="container">
 	<div class="mx-auto">
-		<h2>Signular</h2>
+		<h2>Angular 8 Canvas Example</h2>
 		<div class="center">
-			<ngxy-canvas [width]="640" [height]="240"></ngxy-canvas>
+			<ngxy-canvas [width]="400" [height]="400"></ngxy-canvas>
 		</div>
 	</div>
 </div>
