--- a/src/app/canvas.component.html
+++ b/src/app/canvas.component.html
@@ -2,8 +2,8 @@
   <canvas #canvas></canvas>
 </div>
 <div>
-  <button (click)="clearCanvas()">Clear</button>&nbsp;<button (click)="submitSignature()">Submit</button>
-  <div *ngIf="signatureData">
-    <pre>{{ signatureData }}</pre>
+  <button (click)="clearCanvas()">Clear</button>&nbsp;<button (click)="submitImage()">Submit</button>
+  <div *ngIf="imageData">
+    <pre>{{ imageData }}</pre>
   </div>
 </div>
